# swc-plugin-auto-import

./: .gitignore  CHANGELOG_IMPORTS_CONFIG.md  Cargo.toml  IMPORT_TYPES.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-transform.js
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
playground/: auto-imports.d.ts  next.config.ts  package.json
playground/app/: page.tsx
src/: collector.rs  config.rs  lib.rs  presets.rs  visitor.rs
tests/: integration.rs
tests/fixture/custom-imports/: config.json  input.ts  output.js
tests/fixture/explicit-imports/: config.json  input.ts  output.js
tests/fixture/inline-preset/: config.json  input.tsx  output.js
tests/fixture/local-declaration/: input.ts  output.js
tests/fixture/mapping-special-imports/: config.json  input.ts  output.js
tests/fixture/namespace-import/: config.json  input.ts  output.js
tests/fixture/nested-inline-preset/: config.json  input.tsx  output.js
tests/fixture/no-duplicate/: input.ts  output.js
tests/fixture/react-hooks/: input.tsx  output.js
tests/fixture/react-use-client/: config.json  input.tsx  output.js
tests/fixture/single-preset/: config.json  input.tsx  output.js
tests/fixture/vue-basic/: config.json  input.ts  output.js
tests/fixture/vue-router/: config.json  input.ts  output.js
