[package]
name = "swc-plugin-auto-import"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = [
  "cdylib",
  "rlib" 
]
name = "swc_plugin_auto_import"

[profile.release]
lto = true

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
swc_core = { version = "54.0.*", features = [
  "ecma_plugin_transform",
  "ecma_ast",
  "ecma_visit",
  "ecma_codegen",
  "common" 
] }

[dev-dependencies]
swc_core = { version = "54.0.*", features = [
  "ecma_plugin_transform",
  "ecma_ast",
  "ecma_visit",
  "testing",
  "ecma_parser",
  "ecma_codegen" 
] }
testing = "19.0.0"
testing_macros = "1.0.1"

# .cargo/config.toml defines few alias to build plugin.
# cargo build-wasip1 generates wasm32-wasip1 binary
# cargo build-wasm32 generates wasm32-unknown-unknown binary.
